# uw-copilot-template

./: .databricksignore  .gitignore  Makefile  README.md  app.yaml  databricks.yml  e2e_flow_test.py  grant_app_permissions.py  pyproject.toml  readme.md  render.yaml  requirements.txt  webapp_local_test.py
app/: app.py  app.yaml
app/.streamlit/: config.toml
app_v2/: app.py  app.yaml  requirements.txt
app_v2/.streamlit/: config.toml
config/: company_config.example.yaml  company_config.yaml  eval_questions.yaml
docs/: UW_COPILOT_TECHNICAL_DESIGN.md  UW_COPILOT_TEMPLATE_SPEC.md  UW_DOMAIN_KNOWLEDGE.md
infra/: infra_start.py  infra_stop.py
prompts/: guardrails_config.yaml  schema_context.md  system_prompt.md
rag_pipeline/: 00_config.py  01_ingest_batch.py  01b_ingest_stream.py  02_chunk_and_index.py  03_rag_chain.py  04_memory_and_rbac.py  05_structured_data.py  06_guardrails.py  07_evaluate.py  07b_comprehensive_eval.py  08_feedback_loop.py  09_deploy.py  uw_copilot_agent.py
resources/: clusters.yml  jobs.yml
sample_data/atlas_commercial_insurance/: README.md
schema/: 01_create_tables.py  02_seed_data.py  atlas_insurance_rag_schema.md
scripts/: generate_job_names.py
src/uw_copilot/: __init__.py  agent.py  chunker.py  config.py  feedback.py  guardrails.py  retrieval.py  session.py  structured.py
tests/: test_config.py  test_feedback.py  test_guardrails.py  test_retrieval.py  test_session.py
webapp/: DEMO_RUNBOOK.md  README.md  app.yaml  requirements.txt
webapp/frontend/: index.html  package-lock.json  package.json  vite.config.js  (+1 more)
(+10 files in other folders)
