[build-system]
requires      = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "uw-copilot"
version     = "0.1.0"
description = "UW CoPilot — AI-powered underwriting intelligence platform on Databricks"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "databricks-sdk>=0.20.0",
    "databricks-ai-search>=0.3.0",
    "mlflow>=2.13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]
app = [
    "streamlit>=1.35.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths      = ["tests"]
addopts        = "-v --tb=short -p no:cacheprovider --import-mode=importlib"

[tool.ruff]
src         = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
